<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.franchise.DetailFranchiseActivity">

    <ImageView
        android:id="@+id/image_franchise"
        android:layout_width="match_parent"
        android:layout_height="185dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/name_franchise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/outfit_medium"
        android:textSize="33dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_franchise"
        tools:text="@string/name_franchise" />

    <TextView
        android:id="@+id/description_franchise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        android:gravity="start|left"
        android:justificationMode="inter_word"
        android:fontFamily="@font/inter_reguler"
        android:textColor="@color/dark_grey"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_franchise"
        tools:text="@string/description_franchise" />

    <TextView
        android:id="@+id/franchise_category_title"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/category_franchise_title"
        android:textSize="15sp"
        android:textStyle="bold"
        android:fontFamily="@font/outfit_medium"
        app:layout_constraintStart_toStartOf="@+id/description_franchise"
        app:layout_constraintTop_toBottomOf="@+id/description_franchise" />

    <TextView
        android:id="@+id/category_franchise"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:drawableLeft="@drawable/icon_category"
        android:drawablePadding="8dp"
        android:textColor="@color/dark_grey"
        android:textSize="12sp"
        android:fontFamily="@font/inter_reguler"
        app:layout_constraintEnd_toEndOf="@+id/franchise_category_title"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/franchise_category_title"
        app:layout_constraintTop_toBottomOf="@+id/franchise_category_title"
        tools:text="@string/category_franchise" />


    <TextView
        android:id="@+id/type_franchise_title"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/type_franchise_title"
        android:textStyle="bold"
        android:fontFamily="@font/outfit_medium"
        app:layout_constraintStart_toEndOf="@+id/franchise_category_title"
        app:layout_constraintTop_toTopOf="@+id/franchise_category_title"
        tools:textSize="15sp" />

    <TextView
        android:id="@+id/type_franchise"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/icon_type"
        android:drawablePadding="8dp"
        android:textColor="@color/dark_grey"
        android:textSize="12sp"
        android:fontFamily="@font/inter_reguler"
        app:layout_constraintEnd_toEndOf="@+id/type_franchise_title"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/type_franchise_title"
        app:layout_constraintTop_toTopOf="@+id/category_franchise"
        tools:text="@string/type_franchise" />

    <TextView
        android:id="@+id/franchise_cost_title"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/outfit_medium"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/category_franchise"
        app:layout_constraintTop_toBottomOf="@+id/category_franchise"
        tools:text="@string/cost_franchise_title" />

    <TextView
        android:id="@+id/cost_franchise"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="@+id/franchise_cost_title"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/franchise_cost_title"
        app:layout_constraintTop_toBottomOf="@+id/franchise_cost_title"
        tools:text="@string/cost_franchise"
        android:textSize="12sp"
        android:fontFamily="@font/inter_reguler"
        android:textColor="@color/dark_grey"
        android:drawableLeft="@drawable/icon_modal"
        android:drawablePadding="8dp"/>

    <TextView
        android:id="@+id/franchise_outlet_title"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:fontFamily="@font/outfit_medium"
        app:layout_constraintStart_toEndOf="@+id/franchise_cost_title"
        app:layout_constraintTop_toTopOf="@+id/franchise_cost_title"
        tools:text="@string/outlet_franchise_title" />

    <TextView
        android:id="@+id/outlet_franchise"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/icon_category"
        android:drawablePadding="8dp"
        android:textColor="@color/dark_grey"
        android:textSize="12sp"
        android:fontFamily="@font/inter_reguler"
        app:layout_constraintEnd_toEndOf="@+id/franchise_outlet_title"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/franchise_outlet_title"
        app:layout_constraintTop_toTopOf="@+id/cost_franchise"
        tools:text="@string/outlet_franchise" />

    <TextView
        android:id="@+id/franchise_company_title"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/outfit_medium"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/cost_franchise"
        app:layout_constraintTop_toBottomOf="@+id/cost_franchise"
        tools:text="@string/company_franchise_title" />

    <TextView
        android:id="@+id/franchise_compane"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:drawableLeft="@drawable/icon_company"
        android:drawablePadding="8dp"
        android:textColor="@color/dark_grey"
        android:textSize="12sp"
        android:fontFamily="@font/inter_reguler"
        app:layout_constraintEnd_toEndOf="@+id/franchise_company_title"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/franchise_company_title"
        app:layout_constraintTop_toBottomOf="@+id/franchise_company_title"
        tools:text="@string/company_franchise" />

    <TextView
        android:id="@+id/title_website"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:fontFamily="@font/outfit_medium"
        app:layout_constraintStart_toEndOf="@+id/franchise_company_title"
        app:layout_constraintTop_toTopOf="@+id/franchise_company_title"
        tools:text="@string/website_franchise_title" />

    <TextView
        android:id="@+id/website"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:drawableLeft="@drawable/icon_website"
        android:drawablePadding="8dp"
        android:textColor="@color/dark_grey"
        android:textSize="12sp"
        android:fontFamily="@font/inter_reguler"
        app:layout_constraintEnd_toEndOf="@+id/title_website"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/title_website"
        app:layout_constraintTop_toBottomOf="@+id/title_website"
        tools:text="@string/website_franchise" />

    <TextView
        android:id="@+id/phone_title"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/outfit_medium"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/franchise_compane"
        app:layout_constraintStart_toStartOf="@+id/franchise_compane"
        app:layout_constraintTop_toBottomOf="@+id/franchise_compane"
        tools:text="@string/phone_franchise_title" />

        <TextView
        android:id="@+id/phone_franchise"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:drawableLeft="@drawable/icon_phone"
        android:drawablePadding="8dp"
        android:fontFamily="@font/inter_reguler"
        android:textColor="@color/dark_grey"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/phone_title"
        app:layout_constraintStart_toStartOf="@+id/phone_title"
        app:layout_constraintTop_toBottomOf="@+id/phone_title"
        tools:text="@string/phone_franchise" />

    <TextView
        android:id="@+id/title_email"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:fontFamily="@font/outfit_medium"
        app:layout_constraintStart_toEndOf="@+id/phone_title"
        app:layout_constraintTop_toTopOf="@+id/phone_title"
        tools:text="@string/email_franchise_title" />

    <TextView
        android:id="@+id/email_franchise"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/inter_reguler"
        android:drawableLeft="@drawable/icon_email"
        android:drawablePadding="8dp"
        android:textColor="@color/dark_grey"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/title_email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/title_email"
        app:layout_constraintTop_toBottomOf="@+id/title_email"
        tools:text="@string/email_franchise" />

    <TextView
        android:id="@+id/title_est"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/outfit_medium"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_franchise"
        tools:text="@string/est_franchise_title" />

        <TextView
        android:id="@+id/established_franchise"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:drawableLeft="@drawable/icon_date"
        android:drawablePadding="8dp"
        android:textColor="@color/dark_grey"
        android:textSize="12sp"
        android:fontFamily="@font/inter_reguler"
        app:layout_constraintEnd_toEndOf="@+id/title_est"
        app:layout_constraintStart_toStartOf="@+id/title_est"
        app:layout_constraintTop_toBottomOf="@+id/title_est"
        tools:text="@string/est_franchise" />

    <TextView
        android:id="@+id/profit_title"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:fontFamily="@font/outfit_medium"
        app:layout_constraintStart_toEndOf="@+id/title_est"
        app:layout_constraintTop_toTopOf="@+id/title_est"
        tools:text="@string/profit_franchise_title" />

    <TextView
        android:id="@+id/profit_franchise"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/icon_money"
        android:drawablePadding="8dp"
        android:textColor="@color/dark_grey"
        android:textSize="12sp"
        android:fontFamily="@font/inter_reguler"
        app:layout_constraintEnd_toEndOf="@+id/profit_title"
        app:layout_constraintStart_toStartOf="@+id/profit_title"
        app:layout_constraintTop_toTopOf="@+id/established_franchise"
        tools:text="@string/profit_franchise" />

    <TextView
        android:id="@+id/location_title"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/outfit_medium"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/established_franchise"
        app:layout_constraintTop_toBottomOf="@+id/established_franchise"
        tools:text="@string/location_franchise_title" />

    <TextView
        android:id="@+id/location_franchise"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:drawableLeft="@drawable/icon_location"
        android:drawablePadding="8dp"
        android:textColor="@color/dark_grey"
        android:textSize="12sp"
        android:fontFamily="@font/inter_reguler"
        app:layout_constraintEnd_toEndOf="@+id/location_title"
        app:layout_constraintStart_toStartOf="@+id/location_title"
        app:layout_constraintTop_toBottomOf="@+id/location_title"
        tools:text="@string/location_franchise" />

    <TextView
        android:id="@+id/turn_invesment_title"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:fontFamily="@font/outfit_medium"
        app:layout_constraintStart_toEndOf="@+id/location_title"
        app:layout_constraintTop_toTopOf="@+id/location_title"
        tools:text="@string/turn_of_invesment_title" />

    <TextView
        android:id="@+id/turn_invesment"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/inter_reguler"
        android:drawableLeft="@drawable/icon_turn_of_invesment"
        android:drawablePadding="8dp"
        android:textColor="@color/dark_grey"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/turn_invesment_title"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/turn_invesment_title"
        app:layout_constraintTop_toBottomOf="@+id/location_title"
        tools:text="@string/turn_of_investment" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/wishButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/yellow"
        android:contentDescription="@string/wish_button"
        android:src="@drawable/round_favorite_border"
        app:cornerRadius="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>