<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/scroll_view">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".view.article.DetailArticleActivity">


        <!--    <TextView-->
        <!--        android:id="@+id/article"-->
        <!--        android:layout_width="wrap_content"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        android:layout_marginStart="-3dp"-->
        <!--        android:text="@string/article"-->
        <!--        android:textColor="@color/black"-->
        <!--        app:layout_constraintBottom_toBottomOf="@+id/imageView4"-->
        <!--        app:layout_constraintStart_toEndOf="@+id/imageView4"-->
        <!--        app:layout_constraintTop_toTopOf="@+id/imageView4" />-->

        <ImageView
            android:id="@+id/img_article"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.438"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/article" />

        <TextView
            android:id="@+id/tv_name_article"
            android:layout_width="327dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"
            android:fontFamily="@font/outfit_semibold"
            android:textColor="@color/black"
            android:textSize="21sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_article"
            tools:text="@string/article_title" />

        <TextView
            android:id="@+id/tv_author_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:fontFamily="@font/inter_bold"
            android:textColor="@color/black"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="@+id/tv_name_article"
            app:layout_constraintTop_toBottomOf="@+id/tv_name_article"
            tools:text="@string/author_name" />

        <TextView
            android:id="@+id/article_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_reguler"
            android:textColor="@color/black"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="@+id/tv_author_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_author_name"
            tools:text="@string/date_post" />

        <TextView
            android:id="@+id/article_content"
            android:layout_width="327dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/inter_reguler"
            android:justificationMode="inter_word"
            android:textColor="@color/black"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_name_article"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/article_date"
            app:layout_constraintTop_toBottomOf="@+id/article_date"
            tools:text="@string/content_article" />

        <TextView
            android:id="@+id/source_article"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/source"
            android:textColor="@color/black"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="@+id/article_content"
            app:layout_constraintTop_toBottomOf="@+id/article_content" />

        <TextView
            android:id="@+id/tv_link_source"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/inter_reguler"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/article_content"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/article_content"
            app:layout_constraintTop_toBottomOf="@+id/source_article"
            tools:text="@string/link_source" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>